Dna.LLVMInterop/API/LLVM/Transforms/Scalar.h

using namespace llvm;
//===----------------------------------------------------------------------===//
//
// AlignmentFromAssumptions - Use assume intrinsics to set load/store
// alignments.
//
DNA_EXPORT FunctionPass* CreateAlignmentFromAssumptionsPass()
{
    return createAlignmentFromAssumptionsPass();
}
//===----------------------------------------------------------------------===//
//
// AnnotationRemarks - Emit remarks for !annotation metadata.
//
DNA_EXPORT FunctionPass* CreateAnnotationRemarksLegacyPass()
{
    return createAnnotationRemarksLegacyPass();
}
//===----------------------------------------------------------------------===//
//
// SCCP - Sparse conditional constant propagation.
//
DNA_EXPORT FunctionPass* CreateSCCPPass()
{
    return createSCCPPass();
}
//===----------------------------------------------------------------------===//
//
// RedundantDbgInstElimination - This pass removes redundant dbg intrinsics
// without modifying the CFG of the function.  It is a FunctionPass.
//
DNA_EXPORT Pass* CreateRedundantDbgInstEliminationPass()
{
    return createRedundantDbgInstEliminationPass();
}
//===----------------------------------------------------------------------===//
//
// DeadCodeElimination - This pass is more powerful than DeadInstElimination,// because it is worklist driven that can potentially revisit instructions when
// their other instructions become dead, to eliminate chains of dead
// computations.
//
DNA_EXPORT FunctionPass* CreateDeadCodeEliminationPass()
{
    return createDeadCodeEliminationPass();
}
//===----------------------------------------------------------------------===//
//
// DeadStoreElimination - This pass deletes stores that are post-dominated by
// must-aliased stores and are not loaded used between the stores.
//
DNA_EXPORT FunctionPass* CreateDeadStoreEliminationPass()
{
    return createDeadStoreEliminationPass();
}
//===----------------------------------------------------------------------===//
//
// CallSiteSplitting - This pass split call-site based on its known argument
// values.
DNA_EXPORT FunctionPass* CreateCallSiteSplittingPass()
{
    return createCallSiteSplittingPass();
}
//===----------------------------------------------------------------------===//
//
// AggressiveDCE - This pass uses the SSA based Aggressive DCE algorithm.  This
// algorithm assumes instructions are dead until proven otherwise, which makes
// it more successful are removing non-obviously dead instructions.
//
DNA_EXPORT FunctionPass* CreateAggressiveDCEPass()
{
    return createAggressiveDCEPass();
}
//===----------------------------------------------------------------------===//
//
// GuardWidening - An optimization over the @llvm.experimental.guard intrinsic
// that (optimistically) combines multiple guards into one to have fewer checks
// at runtime.
//
DNA_EXPORT FunctionPass* CreateGuardWideningPass()
{
    return createGuardWideningPass();
}
//===----------------------------------------------------------------------===//
//
// LoopGuardWidening - Analogous to the GuardWidening pass, but restricted to a
// single loop at a time for use within a LoopPassManager.  Desired effect is
// to widen guards into preheader or a single guard within loop if that's not
// possible.
//
DNA_EXPORT Pass* CreateLoopGuardWideningPass()
{
    return createLoopGuardWideningPass();
}
//===----------------------------------------------------------------------===//
//
// BitTrackingDCE - This pass uses a bit-tracking DCE algorithm in order to
// remove computations of dead bits.
//
DNA_EXPORT FunctionPass* CreateBitTrackingDCEPass()
{
    return createBitTrackingDCEPass();
}
//===----------------------------------------------------------------------===//
//
// SROA - Replace aggregates or pieces of aggregates with scalar SSA values.
//
DNA_EXPORT FunctionPass* CreateSROAPass()
{
    return createSROAPass();
}
//===----------------------------------------------------------------------===//
//
// InductiveRangeCheckElimination - Transform loops to elide range checks on
// linear functions of the induction variable.
//
DNA_EXPORT Pass* CreateInductiveRangeCheckEliminationPass()
{
    return createInductiveRangeCheckEliminationPass();
}
//===----------------------------------------------------------------------===//
//
// InductionVariableSimplify - Transform induction variables in a program to all
// use a single canonical induction variable per loop.
//
DNA_EXPORT Pass* CreateIndVarSimplifyPass()
{
    return createIndVarSimplifyPass();
}
//===----------------------------------------------------------------------===//
//
// LICM - This pass is a loop invariant code motion and memory promotion pass.
//
DNA_EXPORT Pass* CreateLICMPass()
{
    return createLICMPass();
}
//===----------------------------------------------------------------------===//
//
// LoopSink - This pass sinks invariants from preheader to loop body where
// frequency is lower than loop preheader.
//
DNA_EXPORT Pass* CreateLoopSinkPass()
{
    return createLoopSinkPass();
}
//===----------------------------------------------------------------------===//
//
// LoopPredication - This pass does loop predication on guards.
//
DNA_EXPORT Pass* CreateLoopPredicationPass()
{
    return createLoopPredicationPass();
}
//===----------------------------------------------------------------------===//
//
// LoopInterchange - This pass interchanges loops to provide a more
// cache-friendly memory access patterns.
//
DNA_EXPORT Pass* CreateLoopInterchangePass()
{
    return createLoopInterchangePass();
}
//===----------------------------------------------------------------------===//
//
// LoopFlatten - This pass flattens nested loops into a single loop.
//
DNA_EXPORT FunctionPass* CreateLoopFlattenPass()
{
    return createLoopFlattenPass();
}
//===----------------------------------------------------------------------===//
//
// LoopStrengthReduce - This pass is strength reduces GEP instructions that use
// a loop's canonical induction variable as one of their indices.
//
DNA_EXPORT Pass* CreateLoopStrengthReducePass()
{
    return createLoopStrengthReducePass();
}
//===----------------------------------------------------------------------===//
//
// LoopInstSimplify - This pass simplifies instructions in a loop's body.
//
DNA_EXPORT Pass* CreateLoopInstSimplifyPass()
{
    return createLoopInstSimplifyPass();
}
//===----------------------------------------------------------------------===//
//
// LoopUnroll - This pass is a simple loop unrolling pass.
//
DNA_EXPORT Pass* CreateLoopUnrollPass(int OptLevel, bool OnlyWhenForced, bool ForgetAllSCEV, int Threshold, int Count, int AllowPartial, int Runtime, int UpperBound, int AllowPeeling)
{
    return createLoopUnrollPass(OptLevel, OnlyWhenForced, ForgetAllSCEV, Threshold, Count, AllowPartial, Runtime, UpperBound, AllowPeeling);
}
// Create an unrolling pass for full unrolling that uses exact trip count only
// and also does peeling.
DNA_EXPORT Pass* CreateSimpleLoopUnrollPass(int OptLevel, bool OnlyWhenForced, bool ForgetAllSCEV)
{
    return createSimpleLoopUnrollPass(OptLevel, OnlyWhenForced, ForgetAllSCEV);
}
//===----------------------------------------------------------------------===//
//
// LoopUnrollAndJam - This pass is a simple loop unroll and jam pass.
//
DNA_EXPORT Pass* CreateLoopUnrollAndJamPass(int OptLevel)
{
    return createLoopUnrollAndJamPass(OptLevel);
}
//===----------------------------------------------------------------------===//
//
// LoopReroll - This pass is a simple loop rerolling pass.
//
DNA_EXPORT Pass* CreateLoopRerollPass()
{
    return createLoopRerollPass();
}