Dna/LLVMInterop/API/LLVMBindings/Transforms/NativeScalarApi.cs

using System;
using System.Collections.Generic;
using System.Linq;
using System.Runtime.InteropServices;
using System.Text;
using System.Threading.Tasks;

namespace Dna.LLVMInterop.API.LLVMBindings.Transforms
{
    public static unsafe class NativeScalarApi
    {
        //===----------------------------------------------------------------------===//
        //
        // AlignmentFromAssumptions - Use assume intrinsics to set load/store
        // alignments.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateAlignmentFromAssumptionsPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateAlignmentFromAssumptionsPass();

        //===----------------------------------------------------------------------===//
        //
        // AnnotationRemarks - Emit remarks for !annotation metadata.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateAnnotationRemarksLegacyPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateAnnotationRemarksLegacyPass();

        //===----------------------------------------------------------------------===//
        //
        // SCCP - Sparse conditional constant propagation.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateSCCPPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateSCCPPass();

        //===----------------------------------------------------------------------===//
        //
        // RedundantDbgInstElimination - This pass removes redundant dbg intrinsics
        // without modifying the CFG of the function.  It is a FunctionPass.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateRedundantDbgInstEliminationPass")]
        public unsafe static extern LLVMOpaquePass* CreateRedundantDbgInstEliminationPass();

        //===----------------------------------------------------------------------===//
        //
        // DeadCodeElimination - This pass is more powerful than DeadInstElimination,// because it is worklist driven that can potentially revisit instructions when
        // their other instructions become dead, to eliminate chains of dead
        // computations.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateDeadCodeEliminationPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateDeadCodeEliminationPass();

        //===----------------------------------------------------------------------===//
        //
        // DeadStoreElimination - This pass deletes stores that are post-dominated by
        // must-aliased stores and are not loaded used between the stores.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateDeadStoreEliminationPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateDeadStoreEliminationPass();

        //===----------------------------------------------------------------------===//
        //
        // CallSiteSplitting - This pass split call-site based on its known argument
        // values.
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateCallSiteSplittingPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateCallSiteSplittingPass();

        //===----------------------------------------------------------------------===//
        //
        // AggressiveDCE - This pass uses the SSA based Aggressive DCE algorithm.  This
        // algorithm assumes instructions are dead until proven otherwise, which makes
        // it more successful are removing non-obviously dead instructions.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateAggressiveDCEPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateAggressiveDCEPass();

        //===----------------------------------------------------------------------===//
        //
        // GuardWidening - An optimization over the @llvm.experimental.guard intrinsic
        // that (optimistically) combines multiple guards into one to have fewer checks
        // at runtime.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateGuardWideningPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateGuardWideningPass();

        //===----------------------------------------------------------------------===//
        //
        // LoopGuardWidening - Analogous to the GuardWidening pass, but restricted to a
        // single loop at a time for use within a LoopPassManager.  Desired effect is
        // to widen guards into preheader or a single guard within loop if that's not
        // possible.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopGuardWideningPass")]
        public unsafe static extern LLVMOpaquePass* CreateLoopGuardWideningPass();

        //===----------------------------------------------------------------------===//
        //
        // BitTrackingDCE - This pass uses a bit-tracking DCE algorithm in order to
        // remove computations of dead bits.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateBitTrackingDCEPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateBitTrackingDCEPass();

        //===----------------------------------------------------------------------===//
        //
        // SROA - Replace aggregates or pieces of aggregates with scalar SSA values.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateSROAPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateSROAPass();

        //===----------------------------------------------------------------------===//
        //
        // InductiveRangeCheckElimination - Transform loops to elide range checks on
        // linear functions of the induction variable.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateInductiveRangeCheckEliminationPass")]
        public unsafe static extern LLVMOpaquePass* CreateInductiveRangeCheckEliminationPass();

        //===----------------------------------------------------------------------===//
        //
        // InductionVariableSimplify - Transform induction variables in a program to all
        // use a single canonical induction variable per loop.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateIndVarSimplifyPass")]
        public unsafe static extern LLVMOpaquePass* CreateIndVarSimplifyPass();

        //===----------------------------------------------------------------------===//
        //
        // LICM - This pass is a loop invariant code motion and memory promotion pass.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLICMPass")]
        public unsafe static extern LLVMOpaquePass* CreateLICMPass();

        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLICMPass")]
        public unsafe static extern LLVMOpaquePass* CreateLICMPass(uint LicmMssaOptCap, uint LicmMssaNoAccForPromotionCap, bool AllowSpeculation);

        //===----------------------------------------------------------------------===//
        //
        // LoopSink - This pass sinks invariants from preheader to loop body where
        // frequency is lower than loop preheader.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopSinkPass")]
        public unsafe static extern LLVMOpaquePass* CreateLoopSinkPass();

        //===----------------------------------------------------------------------===//
        //
        // LoopPredication - This pass does loop predication on guards.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopPredicationPass")]
        public unsafe static extern LLVMOpaquePass* CreateLoopPredicationPass();

        //===----------------------------------------------------------------------===//
        //
        // LoopInterchange - This pass interchanges loops to provide a more
        // cache-friendly memory access patterns.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopInterchangePass")]
        public unsafe static extern LLVMOpaquePass* CreateLoopInterchangePass();

        //===----------------------------------------------------------------------===//
        //
        // LoopFlatten - This pass flattens nested loops into a single loop.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopFlattenPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateLoopFlattenPass();

        //===----------------------------------------------------------------------===//
        //
        // LoopStrengthReduce - This pass is strength reduces GEP instructions that use
        // a loop's canonical induction variable as one of their indices.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopStrengthReducePass")]
        public unsafe static extern LLVMOpaquePass* CreateLoopStrengthReducePass();

        //===----------------------------------------------------------------------===//
        //
        // LoopInstSimplify - This pass simplifies instructions in a loop's body.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopInstSimplifyPass")]
        public unsafe static extern LLVMOpaquePass* CreateLoopInstSimplifyPass();

        //===----------------------------------------------------------------------===//
        //
        // LoopUnroll - This pass is a simple loop unrolling pass.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopUnrollPass")]
        public unsafe static extern LLVMOpaquePass* CreateLoopUnrollPass(int OptLevel, bool OnlyWhenForced, bool ForgetAllSCEV, int Threshold, int Count, int AllowPartial, int Runtime, int UpperBound, int AllowPeeling);

        // Create an unrolling pass for full unrolling that uses exact trip count only
        // and also does peeling.
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateSimpleLoopUnrollPass")]
        public unsafe static extern LLVMOpaquePass* CreateSimpleLoopUnrollPass(int OptLevel, bool OnlyWhenForced, bool ForgetAllSCEV);

        //===----------------------------------------------------------------------===//
        //
        // LoopUnrollAndJam - This pass is a simple loop unroll and jam pass.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopUnrollAndJamPass")]
        public unsafe static extern LLVMOpaquePass* CreateLoopUnrollAndJamPass(int OptLevel);

        //===----------------------------------------------------------------------===//
        //
        // LoopReroll - This pass is a simple loop rerolling pass.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopRerollPass")]
        public unsafe static extern LLVMOpaquePass* CreateLoopRerollPass();
